// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`If.jsx If declared with a falsy \`is\` property with no \`Then\` children but with one or more \`Else\` children should render all applicable children as expected 1`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with no \`Then\` children but with one or more \`Else\` children should render all applicable children as expected 2`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with no \`Then\` children but with one or more \`Else\` children should render all applicable children as expected 3`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with no \`Then\` children but with one or more \`Else\` children should render all applicable children as expected 4`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with no \`Then\` children but with one or more \`Else\` children should render all applicable children as expected 5`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with no \`Then\` children but with one or more \`Else\` children should render all applicable children as expected 6`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with no \`Then\` children but with one or more \`Else\` children should render all applicable children as expected 7`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with no \`Then\` children but with one or more \`ElseIf\` children and with one or more \`Else\` children should render all applicable children as expected 1`] = `
Array [
  <span>
    Second child.
</span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with no \`Then\` children should render the children as expected 1`] = `
Array [
  "First child.",
  <span>
    Second child.
</span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with no children should render as expected 1`] = `null`;

exports[`If.jsx If declared with a falsy \`is\` property with no children should render as expected 2`] = `null`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children and one or more \`Else\` children should render all applicable children as expected 1`] = `
<span>
  Last child.
</span>
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children and one or more \`Else\` children should render all applicable children as expected 2`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children and one or more \`Else\` children should render all applicable children as expected 3`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children and one or more \`Else\` children should render all applicable children as expected 4`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children and one or more \`Else\` children should render all applicable children as expected 5`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children and one or more \`Else\` children should render all applicable children as expected 6`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children and one or more \`Else\` children should render all applicable children as expected 7`] = `
Array [
  <span>
    First child.
  </span>,
  <span>
    Second child.
  </span>,
  <span>
    Last child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children and one or more \`ElseIf\` children should render all applicable children as expected 1`] = `
Array [
  <span>
    Second child.
</span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all applicable children as expected 1`] = `
Array [
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all applicable children as expected 2`] = `
Array [
  "First child.",
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all applicable children as expected 3`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all applicable children as expected 4`] = `
Array [
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all applicable children as expected 5`] = `
<span>
  Second child.
</span>
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all applicable children as expected 6`] = `"First child."`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all applicable children as expected 7`] = `null`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 1`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 2`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 3`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 4`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 5`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 6`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a falsy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 7`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with no \`Then\` children should render the children as expected 1`] = `
Array [
  "First child.",
  <span>
    Second child.
</span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with no \`Then\` children should render the children as expected 2`] = `
Array [
  "First child.",
  <span>
    Second child.
</span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with no children should render as expected 1`] = `null`;

exports[`If.jsx If declared with a truthy \`is\` property with no children should render as expected 2`] = `null`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children and one or more \`ElseIf\` children should render applicable children as expected 1`] = `
Array [
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 1`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 2`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 3`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 4`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 5`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 6`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all children, including \`Then\` children, as expected 7`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all non-\`Then\` children as expected 1`] = `
Array [
  <span>
    Second child.
  </span>,
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all non-\`Then\` children as expected 2`] = `
Array [
  "First child.",
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all non-\`Then\` children as expected 3`] = `
Array [
  "First child.",
  <span>
    Second child.
  </span>,
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all non-\`Then\` children as expected 4`] = `
Array [
  "Third child[0].",
  "Third child[1].",
]
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all non-\`Then\` children as expected 5`] = `
<span>
  Second child.
</span>
`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all non-\`Then\` children as expected 6`] = `"First child."`;

exports[`If.jsx If declared with a truthy \`is\` property with one or more \`Then\` children should render all non-\`Then\` children as expected 7`] = `null`;
